--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffcc00;
+  background-color: #191b25;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
